--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -21,7 +21,7 @@
 
 .intro__logo {
   text-align: center;
-  margin: 0;
+  margin-top: 8px;
   padding: 0;
 }
 
@@ -47,6 +47,7 @@
   .intro__logo {
     width: 461px;
     height: 350px;
+    margin-top: -8px;
   }
 
   @media (min-resolution: 2dppx) {
