--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,10 +1,9 @@
 .page-footer {
-  padding: 25px 20px;
+  padding: 24px 20px;
 }
 
-.page-footer__hachtag {
-  margin: 0;
-  padding-bottom: 30px;
+.page-footer__hashtag {
+  margin-bottom: 31px;
 }
 
 .page-footer__wrapper {
@@ -13,7 +12,7 @@
 }
 
 .page-footer__copyright {
-  padding-top: 30px;
+  padding-top: 41px;
   display: flex;
   align-self: center;
   justify-content: center;
@@ -23,24 +22,25 @@
   color: @color-black;
   text-decoration: none;
 
-  &:hover path,
-  &:focus path {
+  &:hover .page-footer__link-icon,
+  &:focus .page-footer__link-icon {
     fill: @color-dark-sky-blue;
   }
 
-  &:active path {
+  &:active .page-footer__link-icon {
     fill: @color-dark-charcoal-opacity;
   }
 }
 
 .page-footer__desc {
   padding-right: 10px;
+  padding-top: 4px;
 }
 
 @media (min-width: @tablet-width) {
   .page-footer {
     background-color: @color-white;
-    padding: 25px 60px;
+    padding: 34px 60px;
   }
 
   .page-footer__wrapper {
@@ -48,10 +48,18 @@
     align-items: center;
     justify-content: space-between;
   }
+
+  .page-footer__copyright {
+    padding: 0 0 7px;
+  }
+
+  .page-footer__desc {
+    padding-right: 12px;
+  }
 }
 
 @media (min-width: @desktop-width) {
   .page-footer {
-    padding: 25px 120px;
+    padding: 32px 120px;
   }
 }
