PixelPerfect для формы

--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -98,7 +98,7 @@
 
       .features__header::before {
         position: absolute;
-        top: 0px;
+        top: 0;
         left: 42%;
         content: "";
         width: 64px;
@@ -180,8 +180,8 @@
 
     &--meal {
       .features__header::before {
-      top: 3px;
-      left: 40%;
+        top: 3px;
+        left: 40%;
       }
 
       .features__desc {
