--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,8 +1,13 @@
 .page-form .intro {
   background-image: url("../img/background-small.jpg");
-  background-position: 50% 50%;
+  // background-position: 50% 50%;
   background-repeat: no-repeat;
-  min-height: 214px;
+  background-position: bottom;
+  min-height: 158px;
+}
+
+.page-form .intro__logo {
+  margin-top: -8px;
 }
 
 @media (min-resolution: 2dppx) {
@@ -15,12 +20,13 @@
 @media (min-width: @tablet-width) {
   .page-form .intro {
     background-image: url("../img/background-middle.jpg");
-    min-height: 346px;
+    min-height: 290px;
   }
 
   .page-form .intro__logo {
     width: 457px;
     height: 78px;
+    margin-top: -14px;
   }
 
   @media (min-resolution: 2dppx) {
@@ -32,9 +38,15 @@
 }
 
 @media (min-width: @desktop-width) {
-  .page-form .intro {
-    background-image: url("../img/background-big.jpg");
-    min-height: 357px;
+  .page-form {
+    .intro {
+      background-image: url("../img/background-big.jpg");
+      min-height: 300px;
+    }
+
+    .intro__logo {
+      margin-top: -13px;
+    }
   }
 
   @media (min-resolution: 2dppx) {
