--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -30,6 +30,7 @@
 @color-umber: #604E43;
 @color-gainsboro: #dbdbdb;
 @color-light-gray: #D5D5D5;
+@color-cadet: #5C6870;
 
 /* Fonts */
 @font-family: PT Sans, Arial, sans-serif;
