--- a/source/less/blocks/image-container.less
+++ b/source/less/blocks/image-container.less
@@ -6,17 +6,20 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  font-size: 14px;
+  line-height: 24px;
 }
 
 .image-container__info p,
 .image-container__info h3 {
   margin: 0;
-  padding: 0;
+  font-size: 14px;
 }
 
 .image-container__title {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 10px;
 }
 
 .image-container__header {
@@ -34,9 +37,17 @@
   margin-left: 5px;
 }
 
+.image-container__likes {
+  padding-top: 11px;
+}
+
+.image-container__likes-icon {
+  fill: @color-black-opacity;
+}
+
 .image-container__likes-count {
   font-weight: 700;
-  margin-left: 8px;
+  margin-left: 10px;
 }
 
 @media (min-width: @tablet-width) {
@@ -45,7 +56,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 14px 20px;
+    padding: 5px 25px 17px 20px;
   }
 
   .image-container__photo {
@@ -55,6 +66,7 @@
 
   .image-container__likes {
     display: flex;
+    min-width: 60px;
   }
 }
 
@@ -66,17 +78,14 @@
 
   .image-container__info {
     line-height: 24px;
-    padding: 16px 20px;
+    padding: 5px 26px 16px 20px;
     background-color: @color-black-opacity;
     color: @color-white;
     margin-top: -80px;
     position: relative;
   }
 
-  .image-container__likes {
-    & path {
-      fill: @color-white;
-      opacity: 1;
-    }
+  .image-container__likes-icon {
+    fill: @color-white;
   }
 }
