--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -67,6 +67,7 @@
   height: 58px;
   font-size: 21px;
   font-family: @font-family;
+  font-weight: 700;
   line-height: 26px;
   text-align: center;
   text-transform: uppercase;
