--- a/source/less/blocks/fieldset-emotions.less
+++ b/source/less/blocks/fieldset-emotions.less
@@ -11,6 +11,8 @@
   font-size: 18px;
   font-weight: 700;
   line-height: 26px;
+  border: 4px solid @color-anti-flash-white;
+  background-color: @color-anti-flash-white;
 
   &::placeholder {
     color: @color-black;
@@ -19,16 +21,27 @@
     font-weight: 700;
     line-height: 26px;
   }
+
+  &:hover {
+    border-color: @color-platinum-vip;
+    background-color: @color-platinum-vip;
+  }
+
+  &:focus,
+  &:active {
+    background-color: @color-white;
+  }
 }
 
 @media (min-width: @tablet-width) {
   .fieldset-emotions {
-    padding-bottom: 54px;
+    padding-bottom: 52px;
   }
 
   .fieldset-emotions__textarea {
     width: 100%;
     padding-top: 20px;
+    padding-left: 21px;
   }
 }
 
@@ -36,6 +49,7 @@
   .fieldset-emotions {
     .feedback-form__legend {
       margin-top: 21px;
+      padding-bottom: 34px;
     }
   }
 }
