--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -1,3 +1,7 @@
+.page-form {
+  position: relative;
+}
+
 .page-form .intro {
   background-image: url("../img/background-small.jpg");
   // background-position: 50% 50%;
