--- a/source/less/blocks/modal-success.less
+++ b/source/less/blocks/modal-success.less
@@ -4,7 +4,7 @@
   position: absolute;
   width: 320px;
   top: 1587px;
-  left: 0px;
+  left: 0;
   background-color: @color-white;
 
   .section-title__content {
