--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -4,55 +4,103 @@
   padding: 0;
   color: @color-white;
 
-  &--opened .navigation__toggle {
-    background: transparent url("../img/icons/icon-cross-button.svg") no-repeat;
-
-    &:hover,
-    &:focus {
-      opacity: 0.6;
+  &--nojs {
+    .navigation__list {
+      display: flex;
+      flex-direction: column;
     }
 
-    &:active {
-      opacity: 0.3;
-    }
-  }
-
-  &--closed .navigation__toggle {
-    background: transparent url("../img/icons/icon-menu-button.svg") no-repeat;
-
-    &:hover,
-    &:focus {
-      opacity: 0.6;
-    }
-
-    &:active {
-      opacity: 0.3;
+    .navigation__toggle {
+      display: none;
     }
   }
 }
 
 .navigation__toggle {
-  width: 23px;
-  height: 22px;
-  border: none;
   position: absolute;
   top: 17px;
   right: 20px;
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: content-box;
+  width: 23px;
+  height: 22px;
   padding: 0;
+  background: 0 0;
+  border: none;
+  user-select: none;
 }
 
-.navigation__wrapper {
+.navigation__toggle > .navigation__toggle-icon {
+  position: relative;
+  display: inline-block;
+  width: 23px;
+  height: 4px;
+  vertical-align: bottom;
+  background: @color-dark-sky-blue;
+  transition: background 0.3s 0.5s;
+
+  &:hover,
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.navigation--opened .navigation__toggle > .navigation__toggle-icon {
+  background: 0 0;
+}
+
+.navigation__toggle > .navigation__toggle-icon::after,
+.navigation__toggle > .navigation__toggle-icon::before {
+  content: "";
+  position: absolute;
+  left: 0;
   width: 100%;
+  height: 4px;
+  background: @color-dark-sky-blue;
+  transform-origin: 50% 50%;
+  transition: top 0.3s 0.3s, transform 0.3s, background 0.5s;
+}
+
+.navigation__toggle > .navigation__toggle-icon::before {
+  top: 9px;
+}
+
+.navigation__toggle > .navigation__toggle-icon::after {
+  top: -9px;
+}
+
+.navigation--opened .navigation__toggle > .navigation__toggle-icon::before {
+  transform: rotate3d(0, 0, 1, 45deg);
+  background: @color-white;
+}
+
+.navigation--opened .navigation__toggle > .navigation__toggle-icon::after,
+.navigation--opened .navigation__toggle > .navigation__toggle-icon::before {
+  top: 0;
+  transition: top 0.3s, transform 0.3s 0.5s;
+}
+
+.navigation--opened .navigation__toggle > .navigation__toggle-icon::after {
+  transform: rotate3d(0, 0, 1, -45deg);
+  background: @color-white;
 }
 
 .navigation__list {
   margin: 0;
   padding: 0;
   list-style: none;
-  display: flex;
-  flex-direction: column;
-  // display: none;
+  display: none;
+
+  &--visible {
+    display: flex;
+    flex-direction: column;
+  }
 
   &::after {
     content: "";
@@ -61,6 +109,10 @@
     background: linear-gradient(180deg, @color-black-opacity-bulk 0%, @color-black-opacity-shadow 100%);
     margin-top: -7px;
   }
+}
+
+.navigation__wrapper {
+  width: 100%;
 }
 
 .navigation__item {
@@ -106,7 +158,17 @@
 }
 
 @media (min-width: @tablet-width) {
+  .navigation {
+    &--nojs {
+      .navigation__list {
+        display: flex;
+        flex-direction: row;
+      }
+    }
+  }
+
   .navigation__list {
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
     background-color: @color-white;
