--- a/source/less/blocks/socials.less
+++ b/source/less/blocks/socials.less
@@ -44,6 +44,12 @@
 
 @media (min-width: @tablet-width) {
   .socials {
-    margin: 0 12px 18px 0;
+    margin: 3px 12px 8px 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .socials {
+    margin: 0 10px 0 0;
   }
 }
