--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -10,27 +10,31 @@
 @color-black-opacity-low: rgba(0, 0, 0, 0.6);
 @color-dark-sky-blue: #81b3d2;
 @color-dark-sky-blue-light:#81b3d3;
-@color-cyan-azure: #4B81AD;
+@color-cyan-azure: #4b81ad;
 @color-dark-charcoal: #333333;
 @color-dark-charcoal-opacity: rgba(51, 51, 51, 0.3);
 @color-bright-gray: #eeeeee;
 @color-black-shadow: rgba(1, 1, 1, 0.2);
 @color-drop-shadow:  rgba(0, 1, 1, 0.15);
 @color-drop-shadow-low: rgba(0, 1, 1, 0.2);
-@color-platinum: #E7E5E5;
-@color-light-silver: #D6D6D6;
-@color-cerulean-frost: #669EC0;
-@color-silver-lake-blue: #5496BD;
-@color-platinum-vip: #E5E5E5;
-@color-anti-flash-white: #F2F2F2;
-@color-platinum-sedona: #E6E6E6;
-@color-silver-sand: #C4C4C4;
+@color-platinum: #e7e5e5;
+@color-light-silver: #d6d6d6;
+@color-cerulean-frost: #669ec0;
+@color-silver-lake-blue: #5496bd;
+@color-platinum-vip: #e5e5e5;
+@color-anti-flash-white: #f2f2f2;
+@color-platinum-sedona: #e6e6e6;
+@color-silver-sand: #c4c4c4;
 @color-transparent: transparent;
 @color-deep-taupe: #766357;
-@color-umber: #604E43;
+@color-umber: #604e43;
 @color-gainsboro: #dbdbdb;
-@color-light-gray: #D5D5D5;
-@color-cadet: #5C6870;
+@color-light-gray: #d5d5d5;
+@color-cadet: #5c6870;
+@color-chinese-white: #dbeadb;
+@color-granite-gray: #666666;
+@color-pale-pink: #ffd6d6;
+@color-vivid-tangerin: #ffa494;
 
 /* Fonts */
 @font-family: PT Sans, Arial, sans-serif;
