--- a/source/less/blocks/fieldset-observed.less
+++ b/source/less/blocks/fieldset-observed.less
@@ -62,6 +62,13 @@
   border-color: @color-light-gray;
 }
 
+// disabled unchecked checkbox
+.fieldset-observed__checkbox:disabled + label::before,
+.fieldset-observed__checkbox:checked:disabled + label::before {
+  background-color: @color-granite-gray;
+  border-color: @color-granite-gray;
+}
+
 /* checked checkbox */
 .fieldset-observed__checkbox + label::after,
 .fieldset-observed__checkbox:checked + label::after {
@@ -81,6 +88,12 @@
 .fieldset-observed__checkbox + label:active::after,
 .fieldset-observed__checkbox:checked + label:active::after {
   border-color: @color-dark-charcoal-opacity;
+}
+
+// disabled checked checkbox
+.fieldset-observed__checkbox:disabled + label::after,
+.fieldset-observed__checkbox:checked:disabled + label::after {
+  border-color: @color-white;
 }
 
 /* checked checkbox toggle */
