--- a/source/less/blocks/modal-failure.less
+++ b/source/less/blocks/modal-failure.less
@@ -6,6 +6,10 @@
   left: 0;
   width: 320px;
   background-color: @color-white;
+
+  &--show {
+    display: block;
+  }
 }
 
 .modal-failure__header {
