--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -2,6 +2,7 @@
   background-image: url("../img/background-small.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
+  background-size: cover;
   min-height: 156px;
 
   .intro__logo {
