--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -3,6 +3,7 @@
   background-image: url("../img/intro-background-small.jpg");
   background-position: 50% 50%;
   background-repeat: no-repeat;
+  background-size: cover;
   min-height: 389px;
   display: flex;
   justify-content: center;
@@ -14,6 +15,7 @@
     width: 320px;
     height: 57px;
     background-image: url("../img/intro-shape-small.svg");
+    background-size: cover;
     position: absolute;
     bottom: -1px;
   }
