--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -7,6 +7,7 @@
   // background-position: 50% 50%;
   background-repeat: no-repeat;
   background-position: bottom;
+  background-size: cover;
   min-height: 158px;
 }
 
