--- a/source/less/global/global.less
+++ b/source/less/global/global.less
@@ -6,9 +6,14 @@
 
 .visually-hidden {
   position: absolute;
-  clip: rect(0 0 0 0);
+  white-space: nowrap;
   width: 1px;
   height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
   margin: -1px;
 }
 
